- [GUI] [NODES] Wrong state of mongo replica when a node is down
- [GUI] [NODES] Correctly print result when stepping down a Mongodb node
- [LOG_FORWARDER] Reload related frontends of type "file", "redis" or "kafka" without any node selected
- [CLUSTER_CREATE] Correctly reset Admin user during cluster creation
- [HAPROXY] Wrong backend timeout caused by the new intermediate backend


## [2.14.0] - 2024-01-10
### Added
- [API_PARSER] [SIGNALSCIENCES_NGWAF] New collector
- [HAPROXY] [CONF] JWT verification through workflow
- [IDP] [LDAP] Allow to map custom IDP fields to LDAP attributes
### Changed
- [DEPENDENCIES] Python dependencies upgrade
  - aiohttp 3.8.6 -> 3.9.1
  - boto3 1.28.68 -> 1.33.2
  - botocore 1.31.68 -> 1.33.2
  - cachetools 5.3.1 -> 5.3.2
  - certifi 2023.7.22 -> 2023.11.17
  - charset-normalizer 3.3.1 -> 3.3.2
  - cryptography 41.0.4 -> 41.0.7
  - django 4.2.6 -> 4.2.7
  - google-api-core 2.12.0 -> 2.14.0
  - google-api-python-client 2.104.0 -> 2.108.0
  - google-auth 2.23.3 -> 2.23.4
  - idna 3.4 -> 3.6
  - maxminddb 2.4.0 -> 2.5.1
  - meraki 1.38.0 -> 1.39.0
  - protobuf 4.24.4 -> 4.25.1
  - pyasn1 0.5.0 -> 0.5.1
  - pyopenssl 23.2.0 -> 23.3.0
  - python-ldap 3.4.3 -> 3.4.4
  - s3transfer 0.7.0 -> 0.8.1
  - urllib3 1.26.18 -> 1.26.18
  - werkzeug 3.0.0 -> 3.0.1
  - yarl 1.9.2 -> 1.9.3
  - setuptools added -> 69.0.2
- [FRONTEND] Deploy a listener on every node when listening_node is empty
### Fixed
- [API_PARSER] [FORCEPOINT] Avoid duplicate processes when input takes long to process
- [CSC_DOMAINMANAGER] Fix missing json.dumps on logs list
- [PORTAL] [SELF_SERVICE] Correct wrong password change/logout links in self-service page
- [GUI] [WORKFLOW] Correctly print items' list when editing a Workflow
- [GUI] [FRONTEND] Correctly select a good ruleset for API collector but let user override the value
- [CONFIG] [SYSTEM] Correct issue preventing some certificates to be deleted from system
- [OPENID] [MODELS] Get correct URLs for OpenID IDPs